--- a/.github/workflows/lintcharts.yaml
+++ b/.github/workflows/lintcharts.yaml
@@ -26,6 +26,7 @@ jobs:
 
           # Output serialized paths
           echo "matrix=$paths" >> $GITHUB_OUTPUT
+          echo $paths
 
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
