--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,6 +7,8 @@ jobs:
   kubernetes-http-experiment:
     name: Kubernetes HTTP load test    
     runs-on: ubuntu-latest
+    env:
+      chart: charts/iter8
     strategy:
       matrix:
         version: 
@@ -22,6 +24,16 @@ jobs:
     steps:    
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
+
+    - name: Get modified files in the $chart folder
+      id: modified-files
+      uses: tj-actions/changed-files@v35
+      with:
+        files: $chart
+
+    - name: Check modified files in the $chart folder
+      if: steps.modified-files.outputs.any_modified == 'false'
+      run: exit 0
 
     - uses: iter8-tools/iter8@v0.13
 
@@ -56,6 +68,8 @@ jobs:
   kubernetes-grpc-experiment:
     name: Kubernetes gRPC load test
     runs-on: ubuntu-latest
+    env:
+      chart: charts/iter8
     strategy:
       matrix:
         version:
@@ -71,6 +85,16 @@ jobs:
     steps:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
+
+    - name: Get modified files in the $chart folder
+      id: modified-files
+      uses: tj-actions/changed-files@v35
+      with:
+        files: $chart
+
+    - name: Check modified files in the $chart folder
+      if: steps.modified-files.outputs.any_modified == 'false'
+      run: exit 0
 
     - uses: iter8-tools/iter8@v0.13
 
@@ -107,6 +131,8 @@ jobs:
   kubernetes-autox:
     name: Kubernetes Autox test
     runs-on: ubuntu-latest
+    env:
+      chart: charts/autox
     strategy:
       matrix:
         version:
@@ -122,6 +148,16 @@ jobs:
     steps:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
+
+    - name: Get modified files in the $chart folder
+      id: modified-files
+      uses: tj-actions/changed-files@v35
+      with:
+        files: $chart
+
+    - name: Check modified files in the $chart folder
+      if: steps.modified-files.outputs.any_modified == 'false'
+      run: exit 0
 
     - uses: iter8-tools/iter8@v0.13
 
