--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,13 +25,13 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
 
-    - name: Get modified files in the $chart folder
+    - name: Get modified files in the ${{ chart }} folder
       id: modified-files
       uses: tj-actions/changed-files@v35
       with:
         files: $chart
 
-    - name: Check modified files in the $chart folder
+    - name: Check modified files in the ${{ chart }} folder
       if: steps.modified-files.outputs.any_modified == 'false'
       run: exit 0
 
@@ -86,13 +86,13 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
 
-    - name: Get modified files in the $chart folder
+    - name: Get modified files in the ${{ chart }} folder
       id: modified-files
       uses: tj-actions/changed-files@v35
       with:
         files: $chart
 
-    - name: Check modified files in the $chart folder
+    - name: Check modified files in the ${{ chart }} folder
       if: steps.modified-files.outputs.any_modified == 'false'
       run: exit 0
 
@@ -149,13 +149,13 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
 
-    - name: Get modified files in the $chart folder
+    - name: Get modified files in the ${{ chart }} folder
       id: modified-files
       uses: tj-actions/changed-files@v35
       with:
         files: $chart
 
-    - name: Check modified files in the $chart folder
+    - name: Check modified files in the ${{ chart }} folder
       if: steps.modified-files.outputs.any_modified == 'false'
       run: exit 0
 
