--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,25 +29,25 @@ jobs:
       with:
         files: charts/iter8
 
-    - name: Check modified files in the charts/iter8 folder
-      if: steps.modified-files.outputs.any_modified == 'false'
-      run: exit 0
-
     - uses: iter8-tools/iter8@v0.13
+      if: steps.modified-files.outputs.any_modified == 'true'
 
     - name: Start kind cluster ${{ matrix.version }}
       uses: helm/kind-action@v1.5.0
+      if: steps.modified-files.outputs.any_modified == 'true'
       with:
         wait: 300s
         node_image: ${{ matrix.version }}
 
     - name: Create app
+      if: steps.modified-files.outputs.any_modified == 'true'
       run: |
         kubectl create deployment httpbin --image=kennethreitz/httpbin
         kubectl expose deployment httpbin --type=ClusterIP --port=80
         kubectl wait --for=condition=available --timeout=60s deploy/httpbin
 
     - name: iter8 k launch
+      if: steps.modified-files.outputs.any_modified == 'true'
       run: |
         iter8 k launch \
         --localChart \
@@ -57,6 +57,7 @@ jobs:
         --set runner=job
 
     - name: Try other iter8 k commands
+      if: steps.modified-files.outputs.any_modified == 'true'
       run: |
         iter8 k assert -c completed -c nofailure --timeout 60s
         iter8 k report
@@ -88,25 +89,22 @@ jobs:
       with:
         files: charts/iter8
 
-    - name: Check modified files in the charts/iter8 folder
-      if: steps.modified-files.outputs.any_modified == 'false'
-      run: exit 0
-
-    - uses: iter8-tools/iter8@v0.13
-
     - name: Start kind cluster ${{ matrix.version }}
       uses: helm/kind-action@v1.5.0
+      if: steps.modified-files.outputs.any_modified == 'true'
       with:
         wait: 300s
         node_image: ${{ matrix.version }}
 
     - name: Create app
+      if: steps.modified-files.outputs.any_modified == 'true'
       run: |
         kubectl create deploy hello --image=docker.io/grpc/java-example-hostname:latest --port=50051
         kubectl expose deploy hello --port=50051
         kubectl wait --for=condition=available --timeout=60s deploy/hello
         
     - name: iter8 k launch
+      if: steps.modified-files.outputs.any_modified == 'true'
       run: |
         iter8 k launch \
         --localChart \
@@ -118,6 +116,7 @@ jobs:
         --set runner=job
 
     - name: Try other iter8 k commands
+      if: steps.modified-files.outputs.any_modified == 'true'
       run: |
         iter8 k assert -c completed -c nofailure --timeout 60s
         iter8 k report
@@ -125,7 +124,7 @@ jobs:
         iter8 k delete
 
   kubernetes-autox:
-    name: Kubernetes Autox test
+    name: Kubernetes AutoX test
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -149,23 +148,23 @@ jobs:
       with:
         files: charts/autox
 
-    - name: Check modified files in the charts/autox folder
-      if: steps.modified-files.outputs.any_modified == 'false'
-      run: exit 0
-
     - uses: iter8-tools/iter8@v0.13
+      if: steps.modified-files.outputs.any_modified == 'true'
 
     - name: Start kind cluster ${{ matrix.version }}
       uses: helm/kind-action@v1.5.0
+      if: steps.modified-files.outputs.any_modified == 'true'
       with:
         wait: 300s
         node_image: ${{ matrix.version }}
 
     - name: Create namespace
+      if: steps.modified-files.outputs.any_modified == 'true'
       run: |
         kubectl create namespace argocd
         
     - name: Start AutoX controller
+      if: steps.modified-files.outputs.any_modified == 'true'
       run: |
         helm install autox charts/autox \
         --set 'groups.httpbin.trigger.name=httpbin' \
@@ -185,4 +184,5 @@ jobs:
         --set 'groups.httpbin.specs.iter8.values.runner=job'
 
     - name: Check AutoX controller
+      if: steps.modified-files.outputs.any_modified == 'true'
       run: kubectl wait --for=condition=available --timeout=60s deploy/autox -n argocd
