--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -88,6 +88,9 @@ jobs:
       uses: tj-actions/changed-files@v35
       with:
         files: charts/iter8
+    
+    - uses: iter8-tools/iter8@v0.13
+      if: steps.modified-files.outputs.any_modified == 'true'
 
     - name: Start kind cluster ${{ matrix.version }}
       uses: helm/kind-action@v1.5.0
