--- a/.github/workflows/test2.yaml
+++ b/.github/workflows/test2.yaml
@@ -4,14 +4,18 @@ on:
   pull_request:
 
 env:
-  FRUIT: ["Apple", "Pear", "Banana", "Orange"]
+  FRUIT: 
+  - Apple
+  - Pear
+  - Banana
+  - Orange
 
 jobs:
   ssql-get:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        FRUIT: ${{ env.FRUIT }}
+        FRUIT: ${ FRUIT }
     name: Get data
     steps:
-      - run: echo ${FRUIT}
+      - run: echo ${ FRUIT }
