--- a/.github/workflows/test2.yaml
+++ b/.github/workflows/test2.yaml
@@ -4,7 +4,7 @@ on:
   pull_request:
 
 env:
-  stringPaths: |
+  versions: |
     kindest/node:v1.26.3@sha256:61b92f38dff6ccc29969e7aa154d34e38b89443af1a2c14e6cfbd2df6419c66f
     kindest/node:v1.25.8@sha256:00d3f5314cc35327706776e95b2f8e504198ce59ac545d0200a89e69fce10b7f
     kindest/node:v1.24.12@sha256:1e12918b8bc3d4253bc08f640a231bb0d3b2c5a9b28aa3f2ca1aee93e1e8db16
@@ -13,34 +13,32 @@ env:
     kindest/node:v1.21.14@sha256:27ef72ea623ee879a25fe6f9982690a3e370c68286f4356bf643467c552a3888
     kindest/node:v1.27.1@sha256:9915f5629ef4d29f35b478e819249e89cfaffcbfeebda4324e5c01d53d937b09
     kindest/node:v1.27.0@sha256:c6b22e613523b1af67d4bc8a0c38a4c3ea3a2b8fbc5b367ae36345c9cb844518
+
 jobs:
   # Get the paths for the Helm charts to lint
-  get_paths:
+  get_versions:
     runs-on: ubuntu-latest
 
     steps:
       - name: Get the paths for Helm charts to lint
         id: set-matrix
         run: |
-          # Serialize paths into JSON array
-          # paths='["kindest/node:v1.26.3@sha256:61b92f38dff6ccc29969e7aa154d34e38b89443af1a2c14e6cfbd2df6419c66f", "kindest/node:v1.25.8@sha256:00d3f5314cc35327706776e95b2f8e504198ce59ac545d0200a89e69fce10b7f", "kindest/node:v1.24.12@sha256:1e12918b8bc3d4253bc08f640a231bb0d3b2c5a9b28aa3f2ca1aee93e1e8db16", "kindest/node:v1.23.17@sha256:e5fd1d9cd7a9a50939f9c005684df5a6d145e8d695e78463637b79464292e66c", "kindest/node:v1.22.17@sha256:c8a828709a53c25cbdc0790c8afe12f25538617c7be879083248981945c38693", "kindest/node:v1.21.14@sha256:27ef72ea623ee879a25fe6f9982690a3e370c68286f4356bf643467c552a3888", "kindest/node:v1.27.1@sha256:9915f5629ef4d29f35b478e819249e89cfaffcbfeebda4324e5c01d53d937b09", "kindest/node:v1.27.0@sha256:c6b22e613523b1af67d4bc8a0c38a4c3ea3a2b8fbc5b367ae36345c9cb844518"]'
+          # Serialize versions into JSON array
+          jsonVersions=$(jq -ncR '[inputs]' <<< "$versions")
+          echo $jsonVersions
 
-          paths=$(jq -ncR '[inputs]' <<< "$stringPaths")
-
-          echo $paths
-
-          # Output serialized paths
-          echo "matrix=$paths" >> $GITHUB_OUTPUT
+          # Output serialized jsonVersions
+          echo "matrix=$jsonVersions" >> $GITHUB_OUTPUT
 
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
 
   ssql-get:
     runs-on: ubuntu-latest
-    needs: get_paths
+    needs: get_versions
     strategy:
       matrix:
-        version: ${{ fromJson(needs.get_paths.outputs.matrix) }}
+        version: ${{ fromJson(needs.get_versions.outputs.matrix) }}
     name: Get data
     steps:
       - run: echo ${{ matrix.version }}
