--- a/.github/workflows/test2.yaml
+++ b/.github/workflows/test2.yaml
@@ -24,8 +24,10 @@ jobs:
         id: set-matrix
         run: |
           # Serialize versions into JSON array
-          jsonVersions=$(echo $versions | jq -ncR '[inputs]' | sed -e "s/,\"\"//")
+          jsonVersions=$(echo $versions | jq -ncR '[inputs]')
           echo $jsonVersions
+
+          echo $jsonVersions | sed -e "s/,\"\"//"
 
           # Output serialized jsonVersions
           echo "matrix=$jsonVersions" >> $GITHUB_OUTPUT
