--- a/.github/workflows/lintcharts2.yaml
+++ b/.github/workflows/lintcharts2.yaml
@@ -14,19 +14,19 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v3
 
-    - name: Get modified files in the charts/iter8 folder
-      id: modified-files
-      uses: tj-actions/changed-files@v35
-      with:
-        files: charts/iter8
+    # - name: Get modified files in the charts/iter8 folder
+    #   id: modified-files
+    #   uses: tj-actions/changed-files@v35
+    #   with:
+    #     files: charts/iter8
 
     - uses: azure/setup-helm@v3
-      if: steps.modified-files.outputs.any_modified == 'true'
+      # if: steps.modified-files.outputs.any_modified == 'true'
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Create Kubernetes YAML files
-      if: steps.modified-files.outputs.any_modified == 'true'
+      # if: steps.modified-files.outputs.any_modified == 'true'
       run: |
         helm template charts/iter8 --set "tasks={ready,http,assess}" \
         --set ready.deploy=httpbin \
@@ -38,6 +38,7 @@ jobs:
         --set runner=job >> iter8.yaml
 
     - name: Lint Kubernetes YAML files
+      # if: steps.modified-files.outputs.any_modified == 'true'
       uses: stackrox/kube-linter-action@v1
       with:
         directory: iter8.yaml
