--- a/.github/workflows/lintcharts2.yaml
+++ b/.github/workflows/lintcharts2.yaml
@@ -18,19 +18,19 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v3
 
-    # - name: Get modified files in the charts/iter8 folder
-    #   id: modified-files
-    #   uses: tj-actions/changed-files@v35
-    #   with:
-    #     files: charts/iter8
+    - name: Get modified files in the charts/iter8 folder
+      id: modified-files
+      uses: tj-actions/changed-files@v35
+      with:
+        files: charts/iter8
 
     - uses: azure/setup-helm@v3
-      # if: steps.modified-files.outputs.any_modified == 'true'
+      if: steps.modified-files.outputs.any_modified == 'true'
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Create Kubernetes YAML file
-      # if: steps.modified-files.outputs.any_modified == 'true'
+      if: steps.modified-files.outputs.any_modified == 'true'
       run: |
         helm template charts/iter8 \
         --set "tasks={ready,http,assess}" \
@@ -43,7 +43,7 @@ jobs:
         --set runner=job >> iter8.yaml
 
     - name: Lint Kubernetes YAML file
-      # if: steps.modified-files.outputs.any_modified == 'true'
+      if: steps.modified-files.outputs.any_modified == 'true'
       uses: stackrox/kube-linter-action@v1
       with:
         directory: iter8.yaml
@@ -56,19 +56,19 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v3
 
-    # - name: Get modified files in the charts/iter8 folder
-    #   id: modified-files
-    #   uses: tj-actions/changed-files@v35
-    #   with:
-    #     files: charts/iter8
+    - name: Get modified files in the charts/iter8 folder
+      id: modified-files
+      uses: tj-actions/changed-files@v35
+      with:
+        files: charts/iter8
 
     - uses: azure/setup-helm@v3
-      # if: steps.modified-files.outputs.any_modified == 'true'
+      if: steps.modified-files.outputs.any_modified == 'true'
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Create Kubernetes YAML file
-      # if: steps.modified-files.outputs.any_modified == 'true'
+      if: steps.modified-files.outputs.any_modified == 'true'
       run: |
         helm template charts/iter8 \
         --set tasks={http} \
@@ -77,7 +77,7 @@ jobs:
         --set cronjobSchedule="*/1 * * * *" >> iter8.yaml
 
     - name: Lint Kubernetes YAML file
-      # if: steps.modified-files.outputs.any_modified == 'true'
+      if: steps.modified-files.outputs.any_modified == 'true'
       uses: stackrox/kube-linter-action@v1
       with:
         directory: iter8.yaml
@@ -90,19 +90,19 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v3
 
-    # - name: Get modified files in the charts/iter8 folder
-    #   id: modified-files
-    #   uses: tj-actions/changed-files@v35
-    #   with:
-    #     files: charts/iter8
+    - name: Get modified files in the charts/iter8 folder
+      id: modified-files
+      uses: tj-actions/changed-files@v35
+      with:
+        files: charts/iter8
 
     - uses: azure/setup-helm@v3
-      # if: steps.modified-files.outputs.any_modified == 'true'
+      if: steps.modified-files.outputs.any_modified == 'true'
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Create Kubernetes YAML file
-      # if: steps.modified-files.outputs.any_modified == 'true'
+      if: steps.modified-files.outputs.any_modified == 'true'
       run: |
         helm template charts/iter8 \
         --set tasks={grpc} \
@@ -112,7 +112,7 @@ jobs:
         --set runner=job >> iter8.yaml
 
     - name: Lint Kubernetes YAML file
-      # if: steps.modified-files.outputs.any_modified == 'true'
+      if: steps.modified-files.outputs.any_modified == 'true'
       uses: stackrox/kube-linter-action@v1
       with:
         directory: iter8.yaml
@@ -125,19 +125,19 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v3
 
-    # - name: Get modified files in the charts/iter8 folder
-    #   id: modified-files
-    #   uses: tj-actions/changed-files@v35
-    #   with:
-    #     files: charts/iter8
+    - name: Get modified files in the charts/iter8 folder
+      id: modified-files
+      uses: tj-actions/changed-files@v35
+      with:
+        files: charts/iter8
 
     - uses: azure/setup-helm@v3
-      # if: steps.modified-files.outputs.any_modified == 'true'
+      if: steps.modified-files.outputs.any_modified == 'true'
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Create Kubernetes YAML file
-      # if: steps.modified-files.outputs.any_modified == 'true'
+      if: steps.modified-files.outputs.any_modified == 'true'
       run: |
         helm template charts/iter8 \
         --set tasks={grpc} \
@@ -148,7 +148,7 @@ jobs:
         --set cronjobSchedule="*/1 * * * *" >> iter8.yaml
 
     - name: Lint Kubernetes YAML file
-      # if: steps.modified-files.outputs.any_modified == 'true'
+      if: steps.modified-files.outputs.any_modified == 'true'
       uses: stackrox/kube-linter-action@v1
       with:
         directory: iter8.yaml
