--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -340,11 +340,6 @@ jobs:
       with:
         wait: 300s
         node_image: ${{ matrix.version }}
-
-    - name: Create namespace
-      if: steps.modified-files.outputs.any_modified == 'true'
-      run: |
-        kubectl create namespace argocd
         
     - name: Start A/B/n service
       if: steps.modified-files.outputs.any_modified == 'true'
@@ -356,3 +351,41 @@ jobs:
       if: steps.modified-files.outputs.any_modified == 'true'
       run: |
         kubectl wait --for=condition=available --timeout=60s deployment.apps/abn
+
+  traffic:
+    name: Traffic test
+    needs: get_versions
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: ${{ fromJson(needs.get_versions.outputs.matrix) }}
+
+    steps:
+    - name: Check out code
+      uses: actions/checkout@v3
+
+    - name: Get modified files in the charts/traffic folder
+      id: modified-files
+      uses: tj-actions/changed-files@v35
+      with:
+        files: charts/traffic
+
+    - uses: iter8-tools/iter8@v0.13
+      if: steps.modified-files.outputs.any_modified == 'true'
+
+    - name: Start kind cluster ${{ matrix.version }}
+      uses: helm/kind-action@v1.5.0
+      if: steps.modified-files.outputs.any_modified == 'true'
+      with:
+        wait: 300s
+        node_image: ${{ matrix.version }}
+        
+    - name: Start traffic
+      if: steps.modified-files.outputs.any_modified == 'true'
+      run: |
+        helm install traffic charts/traffic -f charts/traffic/testdata/config.yaml
+
+    - name: Check traffic
+      if: steps.modified-files.outputs.any_modified == 'true'
+      run: |
+        kubectl rollout status --watch --timeout=60s statefulset.apps/traffic
