--- a/charts/traffic/templates/roles.yaml
+++ b/charts/traffic/templates/roles.yaml
@@ -5,7 +5,7 @@ kind: ClusterRole
 kind: Role
 {{- end }}
 metadata:
-  name: {{ $.Release.Name }}-traffic
+  name: {{ $.Release.Name }}
   {{ template "iter8-traffic.labels" $ }}
 rules:
 {{- range $typeName, $type := .Values.resourceTypes }}
@@ -30,7 +30,7 @@ kind: ClusterRoleBinding
 kind: RoleBinding
 {{- end }}
 metadata:
-  name: {{ $.Release.Name }}-traffic
+  name: {{ $.Release.Name }}
   {{ template "iter8-traffic.labels" $ }}
 subjects:
 - kind: ServiceAccount
@@ -42,5 +42,5 @@ roleRef:
 {{- else }}
   kind: Role
 {{- end }}
-  name: {{ $.Release.Name }}-traffic
+  name: {{ $.Release.Name }}
   apiGroup: rbac.authorization.k8s.io
