remove mesh gateway (#72)
* remove mesh gateway

Signed-off-by: Michael Kalantar <kalantar@us.ibm.com>

* update test after name change

Signed-off-by: Michael Kalantar <kalantar@us.ibm.com>

---------

Signed-off-by: Michael Kalantar <kalantar@us.ibm.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -425,7 +425,7 @@ jobs:
       if: steps.modified-files.outputs.any_modified == 'true'
       run: |
         helm template traffic charts/traffic-templates \
-        --set templateName=initialize \
+        --set templateName=initialize-rollout \
         --set targetEnv=kserve-modelmesh \
         --set trafficStrategy=blue-green \
         --set modelName=wisdom > manifest.yaml
@@ -473,7 +473,7 @@ jobs:
       if: steps.modified-files.outputs.any_modified == 'true'
       run: |
         helm template traffic charts/traffic-templates \
-        --set templateName=initialize \
+        --set templateName=initialize-rollout \
         --set targetEnv=kserve-modelmesh \
         --set trafficStrategy=canary \
         --set modelName=wisdom > manifest.yaml
@@ -521,7 +521,7 @@ jobs:
       if: steps.modified-files.outputs.any_modified == 'true'
       run: |
         helm template traffic charts/traffic-templates \
-        --set templateName=initialize \
+        --set templateName=initialize-rollout \
         --set targetEnv=kserve-modelmesh \
         --set trafficStrategy=mirror \
         --set modelName=wisdom > manifest.yaml
